Fix silly unlocalized name

--- a/src/main/resources/assets/craftingchisel/lang/en_US.lang
+++ b/src/main/resources/assets/craftingchisel/lang/en_US.lang
@@ -1,3 +1,3 @@
-tterrag.storageBlock.name=Omni-Crafting Table
+tterrag.omniCraftingTable.name=Omni-Crafting Table
 item.craftingChisel.name=Crafting Chisel
 itemGroup.Crafting Chisel=Crafting Chisel
